--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
                 <!-- Team Member 1 -->
                 <div class="team-member fade-in-up">
                     <div class="team-avatar">
-                        <img src="img/telegram-cloud-photo-size-2-5195133510455332999-y.jpg" alt="">
+                        <img src="img/hosila.jpg" alt="">
                     </div>
                     <h3 class="team-name">Hosila Abduazimova</h3>
                     <p class="team-role">Full-Stack Developer / Team Lead</p>
@@ -1116,7 +1116,7 @@
                 <!-- Team Member 2 -->
                 <div class="team-member fade-in-up" style="animation-delay: 0.1s">
                     <div class="team-avatar">
-                        <img src="img/telegram-cloud-photo-size-2-5197320194269842713-y.jpg" alt="">
+                        <img src="img/abdulloh.jpg" alt="">
                     </div>
                     <h3 class="team-name">Abdulloh Sultonkabirov</h3>
                     <p class="team-role">Data Scientist</p>
@@ -1148,7 +1148,7 @@
                 <!-- Team Member 3 -->
                 <div class="team-member fade-in-up" style="animation-delay: 0.2s">
                     <div class="team-avatar">
-                        <img src="img/telegram-cloud-photo-size-2-5195133510455332954-x.jpg" alt="">
+                        <img src="img/fariza.jpg" alt="">
                     </div>
                     <h3 class="team-name">Fariza Raxman</h3>
                     <p class="team-role">AI/ML Engineer</p>
@@ -1180,7 +1180,7 @@
                 
                 <div class="team-member fade-in-up" style="animation-delay: 0.3s">
                     <div class="team-avatar">
-                        <img src="img/telegram-peer-photo-size-2-5244569696428821863-1-0-0.jpg" alt="">
+                        <img src="img/munira.jpg" alt="">
                     </div>
                     <h3 class="team-name">Munira Genjeboeva</h3>
                     <p class="team-role">UI/UX Designer</p>
